--- a/src/components/markdown.css
+++ b/src/components/markdown.css
@@ -1,141 +1,85 @@
-.markdown-content {
-  color: #333333; /* 文字颜色 */
-  padding: 16px;
-  border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0); /* 背景色 */
+:root {
+    --primary-color: #62c6da;
+    --link-color: #3498db;
+    --text-color: #34495e;
+    --background-color: #ffffff;
+    --blockquote-border-color: #4289b9;
+    --blockquote-background-color: rgba(66, 185, 131, 0.1);
+    --code-background-color: #f8f8f8;
+    --code-text-color: #e96900;
 }
 
-.markdown-content h1, .markdown-content h2, .markdown-content h3,
-.markdown-content h4, .markdown-content h5, .markdown-content h6 {
-  color: #333333; /* 标题颜色 */
-  border-bottom: 1px solid #101010;
-  padding-bottom: 0.3em;
+.dark-theme {
+    --primary-color: #6699ff; /* 新的主色条 */
+    --link-color: #1e90ff; /* 链接颜色 */
+    --text-color: #ecf0f1; /* 文本颜色 */
+    --background-color: #2c3e50; /* 背景颜色 */
+    --blockquote-border-color: #1e90ff; /* 引用边框颜色 */
+    --blockquote-background-color: rgba(128, 192, 255, 0.687); /* 引用背景颜色 */
+    --code-background-color: #34495e; /* 代码背景颜色 */
+    --code-text-color: #e96900; /* 代码文本颜色 */
+}
+
+.markdown-content {
+    font-family: 'Ubuntu', 'Source Sans Pro', sans-serif;
+    color: var(--text-color);
+    background-color: var(--background-color);
+    line-height: 1.6;
+    margin: 0 auto;
+    overflow-x: hidden;
+    padding: 16px;
+    max-width: 860px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .markdown-content a {
-  color: #b66ff4; /* 链接颜色 */
+    color: var(--link-color);
+    font-weight: 600;
+    text-decoration: none;
+}
+
+.markdown-content h1,
+.markdown-content h2,
+.markdown-content h3,
+.markdown-content h4,
+.markdown-content h5,
+.markdown-content h6 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    line-height: 1.4;
+}
+
+.markdown-content p {
+    line-height: 1.6;
+    word-spacing: 0.05rem;
 }
 
 .markdown-content blockquote {
-  border-left: 4px solid #9999CC;
-  padding-left: 16px;
-  color: #6a737d;
-  background-color: #FFFFCC;
+    border-left: 4px solid var(--blockquote-border-color);
+    padding: 10px 15px;
+    color: #727474;
+    background-color: var(--blockquote-background-color);
+    border-radius: 2px;
 }
 
-.markdown-content code {
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 2px 4px;
-  border-radius: 4px;
+.markdown-content code, .markdown-content tt {
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-family: 'Fira Code', 'Roboto Mono', monospace;
+    font-size: 0.92rem;
+    color: var(--code-text-color);
+    background-color: var(--code-background-color);
 }
 
 .markdown-content pre {
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 16px;
-  border-radius: 8px;
-  overflow-x: auto;
-}
-
-.markdown-content table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 16px;
-}
-
-.markdown-content th, .markdown-content td {
-  border: 1px solid #EEEEEE;
-  padding: 8px;
-}
-
-.markdown-content th {
-  background-color: #EEEEEE;
-  color: #333333;
-}
-
-.markdown-content tr:nth-child(2n) {
-  background-color: #EEEEEE;
-}
-
-.markdown-content hr {
-  border: 0;
-  height: 1px;
-  background: #EEEEEE;
-  margin: 24px 0;
-}
-
-.markdown-content ul, .markdown-content ol {
-  padding-left: 2em;
-}
-
-.markdown-content li {
-  margin-bottom: 0.5em;
-}
-
-.markdown-content.light-theme {
-  color: #333333; /* 文字颜色 */
-  padding: 16px;
-  border-radius: 8px;
-  background-color: #FFFFFF; /* 背景色设置为白色 */
-}
-
-.markdown-content.light-theme h1, .markdown-content.light-theme h2, .markdown-content.light-theme h3,
-.markdown-content.light-theme h4, .markdown-content.light-theme h5, .markdown-content.light-theme h6 {
-  color: #333333; /* 标题颜色 */
-  border-bottom: 1px solid #101010;
-  padding-bottom: 0.3em;
-}
-
-.markdown-content.light-theme a {
-  color: #b66ff4; /* 链接颜色 */
-}
-
-.markdown-content.light-theme blockquote {
-  border-left: 4px solid #9999CC;
-  padding-left: 16px;
-  color: #6a737d;
-  background-color: #FFFFCC;
-}
-
-.markdown-content.light-theme code {
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 2px 4px;
-  border-radius: 4px;
-}
-
-.markdown-content.light-theme pre {
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 16px;
-  border-radius: 8px;
-  overflow-x: auto;
-}
-
-.markdown-content.light-theme table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 16px;
-}
-
-.markdown-content.light-theme th, .markdown-content.light-theme td {
-  border: 1px solid #EEEEEE;
-  padding: 8px;
-}
-
-.markdown-content.light-theme th {
-  background-color: #FFFFFF; /* 背景色设置为白色 */
-  color: #333333;
-}
-
-.markdown-content.light-theme tr:nth-child(2n) {
-  background-color: #FFFFFF; /* 背景色设置为白色 */
-}
-
-.markdown-content.light-theme hr {
-  border: 0;
-  height: 1px;
-  background: #EEEEEE;
-  margin: 24px 0;
+    background-color: var(--code-background-color);
+    border: 1px solid #f4f4f4;
+    padding: 0.3rem;
+    line-height: 1.43rem;
+    border-radius: 2px;
+    font-family: 'Fira Code', 'Roboto Mono', monospace;
+    font-size: 0.85rem;
+    overflow: auto;
 }
